Fixed page header overflow issie with breadcrumb context

--- a/src/modules/page_header/page_header.scss
+++ b/src/modules/page_header/page_header.scss
@@ -102,6 +102,7 @@ $pageHeaderCurves: (
 
   z-index: $zIndexInner;
   overflow: visible;
+  position: relative;
 
   &__logo-container {
     height: 0;
